--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,12 +6,13 @@
 
         <title>{% block title %}Welcome!{% endblock %}</title>
 
+        {# Apparement la ligne suivante empêche d'avoir une erreur 404 dans les log pour un favicon pas trouvé #}
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+
         {{ include('partial/_css.html.twig')}}
 
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
+
     </head>
     <body>
         {% block body %}{% endblock %}
