--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,13 +8,14 @@
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/apps/my_height_kilo/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/apps/my_height_kilo/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <div class="example-wrapper">
+        <h1>ECF 3ème du nom</h1>
+        {% if is_granted('ROLE_USER') %}
+            <a href=" {{ path('app_register') }} ">Créer un nouvel utilisateur</a><br>
+            <a href=" {{ path('app_logout') }} ">Se déconnecter</a>
+        {% else %}
+            <a href=" {{ path('app_register') }} ">Créer un nouvel utilisateur</a><br>
+            <a href=" {{ path('app_login') }} ">Se connecter</a>
+        {% endif %}
+    </div>
 {% endblock %}
