--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,8 @@
 
     </head>
     <body>
+        {{ include('partial/_header.html.twig')}}
+
         {% block body %}{% endblock %}
 
         {{ include('partial/_js.html.twig')}}
