modify structure creation to integrate service from partner at creation and add function to activate/deactivate partner using switch

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -22,6 +22,7 @@
                     <a href=" {{ path('app_service_creation') }} ">Créer un nouveau service</a><br>
                     <a href=" {{ path('app_partner_home') }} ">partner_home</a>
                     <a href=" {{ path('app_logout') }} ">Se déconnecter</a>
+                    <a href=" {{ path('app_structure_creation_partner_selection') }} ">test création struture avec droits du partenaire</a>
                 {% else %}
                     <a href=" {{ path('app_register') }} ">Créer un nouvel utilisateur</a><br>
                     <a href=" {{ path('app_partner_creation') }} ">Créer un nouveau partenaire</a><br>
@@ -30,6 +31,8 @@
                     <a href=" {{ path('app_login') }} ">Se connecter</a>
                     <a href=" {{ path('app_partner_home') }} ">partner_home</a>
 {#                    <a href=" {{ path('app_partner_test') }} ">partner_test</a>#}
+                    <a href=" {{ path('app_structure_creation_partner_selection') }} ">test création struture avec droits du partenaire</a>
+
                 {% endif %}
             </div>
         </div>
