search function tuning : focus on search bar, compare in lower caracter, delete old result, blanck field when opening modal, ...

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,10 @@
 
         {% block body %}{% endblock %}
 
+        {{ include('partial/_partnerSearcherModal.html.twig') }}
         {{ include('partial/_js.html.twig')}}
+        {{ include('partial/_partnerSearcherAjax.html.twig')}}
+
 
     </body>
 </html>
