add confirmation modal for partner deletion

--- a/templates/partial/_partnerSearcherAjax.html.twig
+++ b/templates/partial/_partnerSearcherAjax.html.twig
@@ -44,9 +44,12 @@
         $("#exampleModal").on("hidden.bs.modal", function(){
             $('#search-partner').val('');
             $('.search-result').remove();
-            // $('.search-partner-result').empty();
         })
 
+        // Code à essayer de la doc bootstrap our le focus
+        // $('#myModal').on('shown.bs.modal', function () {
+        //     $('#myInput').trigger('focus')
+        // })
 
         //Fermeture jquery
     });
