--- a/templates/partner/partner_home.html.twig
+++ b/templates/partner/partner_home.html.twig
@@ -46,7 +46,9 @@
                             </td>
                                 <td>
                                     <a href="{{path('app_partner_update', {'id': partner.id})}}" class="btn btn-warning m-md-2"><i class="bi bi-pen"></i></a>
-                                    <a href="{{path('app_partner_delete', {'id': partner.id})}}" class="btn btn-danger m-md-2"><i class="bi bi-trash3"></i></a>
+{#                                    <a href="{{path('app_partner_delete', {'id': partner.id})}}" class="btn btn-danger m-md-2"><i class="bi bi-trash3"></i></a>#}
+                                    <a href="{{path('app_partner_delete', {'id': partner.id})}}" class="btn btn-danger m-md-2 btn-delete"><i class="bi bi-trash3"></i></a>
+{#                                    <a href="#" class="btn btn-danger m-md-2 btn-delete" data-id="{{ partner.id }}" id="{{ partner.id }}" ><i class="bi bi-trash3"></i></a>#}
                                 </td>
                             {% endif %}
                             <td>{{ partner.description }}</td>
@@ -78,4 +80,7 @@
             {#-----------------------------#}
         </div>
     </div>
+
+    {{ include('partial/_deleteConfirmModal.html.twig') }}
+
 {% endblock %}
