add mail function / fail to install webpack encore

--- a/templates/partial/_css.html.twig
+++ b/templates/partial/_css.html.twig
@@ -13,5 +13,10 @@
     {# Ajout icone bootstrap  #}
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
+    {# Add font#}
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Fredoka:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
     {# Ajout de ma feuille de style  #}
     <link href="{{ asset('css/style.css') }}" rel="stylesheet"/>
