styling logging page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,4 @@
 /*COLOR GRAPHIC PALLET*/
-a {
     /*Violet*/
     /*color: #52006A;*/
     /*color: rgb(82,0,106);*/
@@ -15,7 +14,7 @@ a {
     /*Jaune*/
     /*color: #FFA900;*/
     /*color: rgb(205,169,0);*/
-}
+
 
 
 body{
@@ -23,7 +22,212 @@ body{
     /*font-family: 'Fredoka One', cursive;*/
 }
 
+h1{
+    color: #52006A;
+}
 
+.bg-pink{
+    /*background-color: rgba(205,17,59,0.5);*/
+    background: rgb(205,17,59);
+    background: linear-gradient(to bottom, rgba(205,17,59,0.7931547619047619) 14%, rgba(255,255,255,1) 78%);
+}
+.bg-pink-reverse{
+    /*background-color: rgba(205,17,59,0.5);*/
+    background: rgb(205,17,59);
+    background: linear-gradient(to top, rgba(205,17,59,0.7931547619047619) 14%, rgba(255,255,255,1) 78%);
+    position: fixed;
+    bottom: 0px;
+    width: 100vw;
+}
+
+.logo{
+    max-width: 100px;
+}
+
+/*Form style overriding bootstrap */
+.form-control{
+    border-color: #52006A;
+}
+
+.form-control:focus {
+    color: #212529;
+    border-color: #52006A;
+    box-shadow: 0 0 0 0.25rem rgba(82, 0, 106, 0.2);
+}
+
+.form-row{
+    max-width: 75%;
+}
+
+/*Form style and other item specific to login form*/
+.label-login{
+    font-size: 2em;
+    color: #52006A;
+}
+
+.register-error{
+    width: fit-content;
+    font-size: 1.3rem;
+    color: #fff;
+}
+
+
+/*START btn submit myself*/
+/*Replace with neon effect button, to see if usefull for other button*/
+.btn-submit{
+    width: 80%;
+    color: #52006A;
+    border-color: #52006A;
+    box-shadow: 0 0 0 0.25rem rgba(82, 0, 106, 0.2);
+    border-radius: 3px;
+}
+
+.btn-submit:hover{
+    width: 80%;
+    color: #000;
+    /*border-color: #52006A;*/
+    border-color: rgb(205, 17, 59);
+    background: rgba(205, 17, 59, 0.2);
+    box-shadow: 0 0 0 0.25rem rgba(205, 17, 59, 1);
+}
+/*END btn submit myself*/
+
+/*START TEST button neon*/
+/*body {*/
+/*    margin: 0;*/
+/*    padding: 0;*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    min-height: 100vh;*/
+/*    background: #031321;*/
+/*    font-family: consolas;*/
+/*}*/
+
+#neon {
+    position: relative;
+    display: inline-block;
+    padding: 15px 30px;
+    /*color: #CD113B;*/
+    color: #52006A;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    text-decoration: none;
+    font-size: 24px;
+    overflow: hidden;
+    transition: 0.2s;
+    background-color: #fff;
+    border: none;
+    /*width: 70%;*/
+}
+
+
+
+#neon:hover {
+    /*color: rgb(239, 192, 203);*/
+    /*color: #52006A;*/
+    color: #CD113B;
+
+    background: #fff;
+    box-shadow: 0 0 10px #CD113B, 0 0 40px #CD113B, 0 0 80px #CD113B;
+    /*border-radius: 3px;*/
+    transition-delay: 1s;
+}
+
+#neon:hover {
+    border-radius: 3px;
+    /*color: #CD113B;*/
+    transition-delay: 1.3s;
+}
+
+#neon span {
+    position: absolute;
+    display: block;
+}
+
+
+
+
+#neon span:nth-child(1) {
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg, transparent, #CD113B);
+}
+
+
+
+#neon:hover span:nth-child(1) {
+    left: 100%;
+    transition: 1s;
+}
+
+
+#neon span:nth-child(3) {
+    bottom: 0;
+    right: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(270deg, transparent, #CD113B);
+}
+
+#neon:hover span:nth-child(3) {
+    right: 100%;
+    transition: 1s;
+    transition-delay: 0.5s;
+}
+
+
+
+#neon span:nth-child(2) {
+    top: -100%;
+    right: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(180deg, transparent, #CD113B);
+}
+
+#neon:hover span:nth-child(2) {
+    top: 100%;
+    transition: 1s;
+    transition-delay: 0.25s;
+}
+
+
+
+#neon span:nth-child(4) {
+    bottom: -100%;
+    left: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(360deg, transparent, #CD113B);
+}
+
+#neon:hover span:nth-child(4) {
+    bottom: 100%;
+    transition: 1s;
+    transition-delay: 0.75s;
+}
+
+
+
+/*END TEST  button neon*/
+
+
+
+/*Menu style overriding bootstrap */
+
+.accordion-button:focus {
+    z-index: 3;
+    border-color: rgba(82,0,106,1);
+    outline: 0;
+    box-shadow: rgba(82,0,106,0.5) 3px 3px 3px 3px;
+}
+.accordion-button:not(.collapsed) {
+    color: rgb(255,255,255);
+    background-color: rgba(82,0,106,0.2);
+}
 a {
     text-decoration: none;
     color: #52006A;
