--- a/templates/partial/_connectedAs.html.twig
+++ b/templates/partial/_connectedAs.html.twig
@@ -1,5 +1,5 @@
 {% if app.user %}
-    <div class="row text-center bg-pink-reverse ">
+    <div class="row text-center bg-pink-reverse sticky-bottom ">
         <p>Vous êtes connecté en tant que {{ app.user.email }}</p>
     </div>
 {% endif %}
