--- a/templates/partial/_menuCommun.html.twig
+++ b/templates/partial/_menuCommun.html.twig
@@ -1,6 +1,7 @@
 
+{% if is_granted('ROLE_FRANCHISE') %}
 
-<div class="col-12 col-sm-3 col-xl-2 accordion" id="accordionExample">
+<div class="col-12 col-sm-3 col-xl-2 accordion " id="accordionExample">
         <div class="accordion-item">
             <h2 class="accordion-header " id="headingZero">
                 <button class="accordion-button collapsed " type="button" data-bs-toggle="collapse" data-bs-target="#collapseZero" aria-expanded="false" aria-controls="collapseZero">
@@ -15,7 +16,7 @@
                 </div>
             </div>
         </div>
-    {% if is_granted('ROLE_USER') %}
+{#    {% if is_granted('ROLE_FRANCHISE') %}#}
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
