--- a/templates/partial/_header.html.twig
+++ b/templates/partial/_header.html.twig
@@ -2,7 +2,7 @@
     <div class="row container-fluid text-center">
 
         <div class="col col-md-3 col-xl-2 text-center">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="{{path('app_partner_home')}}">
                 <img src="{{ asset('ressource/Booty Booster_logo.png')  }}" alt="booty booster logo" class="logo">
             </a>
         </div>
