--- a/templates/partner/partner_home.html.twig
+++ b/templates/partner/partner_home.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Listing partenaires{% endblock %}
+{% block title %}Annuaire des partenaires{% endblock %}
 
 {% block body %}
 
@@ -12,7 +12,7 @@
 
         <div class="col mx-lg-5 mx-md-3"> {# Les offset servent à éviter le menu fixed > sm ? A retraviller offset-sm-3 offset-xl-2 #}
             <div class="row text-center">
-                <h1>Liste des partenaires</h1>
+                <h1>Annuaire des partenaires de Booty Booster</h1>
             </div>
             {#-----------------------------#}
             <div class="row">
@@ -21,7 +21,7 @@
                     <tr>
                         {#                        <th scope="col">Partner</th>#}
                         <th scope="col">Nom</th>
-                        {% if app.user and is_granted('ROLE_USER')  %}
+                        {% if app.user and is_granted('ROLE_FRANCHISE')  %}
                         <th scope="col">Statut</th>
                         <th scope="col">Edition</th>
                         {% endif %}
@@ -36,8 +36,7 @@
 
                         <tr>
                             <th scope="row">{{ partner.name }}</th>
-                            {% if app.user and is_granted('ROLE_USER')  %}
-                                {# Modifier le ROLE_USER en ROLE_FRANCHISE#}
+                            {% if app.user and is_granted('ROLE_FRANCHISE')  %}
                                 <td>
                                 <div class="form-check form-switch">
                                     <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" {{ (partner.isActive) ? 'checked' : '' }} data-id="{{ partner.id }}">
@@ -45,9 +44,9 @@
                                 </div>
                             </td>
                                 <td >
-                                    <a href="{{path('app_partner_update', {'id': partner.id})}}" class="btn btn-warning m-md-2 btn-update"><i class="bi bi-pen"></i></a>
-                                    <a href="{{path('app_partner_delete', {'id': partner.id})}}" class="btn btn-danger m-md-2 btn-delete"><i class="bi bi-trash3"></i></a>
-                                    <a href="{{path('app_partner_detail', {'id': partner.id})}}" class="btn btn-info m-md-2 btn-consult"><i class="bi bi-eye"></i></a>
+                                    <a href="{{path('app_partner_update', {'id': partner.id})}}" class="btn btn-warning m-md-2 btn-update"><i class="bi bi-pen"></i></a><br>
+                                    <a href="{{path('app_partner_delete', {'id': partner.id})}}" class="btn btn-danger m-md-2 btn-delete"><i class="bi bi-trash3"></i></a><br>
+                                    <a href="{{path('app_partner_detail', {'id': partner.id})}}" class="btn btn-info m-md-2 btn-consult"><i class="bi bi-eye"></i></a><br>
 
 
                                 </td>
