--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,17 +1,32 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Utilisateur{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+    <div class="my-3 p-3 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+        <h1>Créer un nouvel utilisateur</h1>
+    </div>
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
+    <div class="my-3 p-3 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+        {{ form_label(registrationForm.email, 'Email de l\'utilisateur', {'label_attr': {'class': 'my-label'}}) }}
+        {{ form_widget(registrationForm.email, {'attr': {'class': 'form-control'}}) }}
+        {{ form_errors(registrationForm.email) }}
+        {{ form_help(registrationForm.email) }}
+
+    </div>
+    <div class="my-3 p-3 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+        {{ form_label(registrationForm.plainPassword, 'Mot de passe de l\'utilisateur', {'label_attr': {'class': 'my-label'}}) }}
+        {{ form_widget(registrationForm.plainPassword, {'attr': {'class': 'form-control'}}) }}
+        {{ form_errors(registrationForm.plainPassword) }}
+        {{ form_help(registrationForm.plainPassword) }}
+
+    </div>
+
+    <div class="my-5 p-3 col-6 offset-3 " >
+            <button type="submit" class="btn btn-submit " >Enregistrer</button>
+    </div>
+    {{ form_rest(registrationForm) }}
     {{ form_end(registrationForm) }}
 {% endblock %}
